Adding settings for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gouriTD.github.io/test-repo/",
+  "homepage": "https://gouriTD.github.io/react-HangmanGame/",
   "name": "react-essentials-deep-dive-adv",
   "private": true,
   "version": "0.0.0",
